# my-packages

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-publish.yml
image_array_and_histogram/: __init__.py  main.py
tests/: test_basic.py
